feat(retriever): introduce SqlDatabaseRetriever